--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,31 @@
 <resources>
     <string name="app_name">synergy</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Phone Activity -->
     <string name="phone">전화</string>
+    <string name="keypad">키패드</string>
+    <string name="recent_history">최근기록</string>
+    <string name="contact">연락처</string>
+    <string name="add_to_contacts">+ 연락처에 추가</string>
+    <string name="input_phone_num">전화번호 입력</string>
+    <string name="phone_num_text">전화번호 텍스트</string>
+    <string name="call">통화</string>
+    <string name="video_call">영상 통화</string>
+    <string name="back">이전</string>
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="three">3</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="six">6</string>
+    <string name="seven">7</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
+    <string name="zero">0</string>
+    <string name="star">*</string>
+    <string name="sharp">#</string>
+    <string name="init_phone_num">010-1234-5678</string>
 </resources>
