--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="phone_num_text">전화번호 텍스트</string>
     <string name="call">통화</string>
     <string name="video_call">영상 통화</string>
-    <string name="back">이전</string>
+    <string name="delete">지우기</string>
     <string name="one">1</string>
     <string name="two">2</string>
     <string name="three">3</string>
