--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,25 @@
     <string name="favorite">즐겨찾기</string>
     <string name="edit">편집</string>
     <string name="share">공유</string>
+
+    <!-- Naver Activity -->
+    <string name="naver_talk">네이버 톡</string>
+    <string name="notification">알림</string>
+    <string name="wallet">지갑</string>
+    <string name="menu">메뉴</string>
+    <string name="naver_pay">네이버 페이</string>
+    <string name="naver_logo">네이버 로고</string>
+    <string name="search_menu">검색 메뉴</string>
+    <string name="profile_image">프로필 이미지</string>
+    <string name="seven_days_ago">7일 전</string>
+    <string name="cuter_than_i_thought">생각보다 귀여움</string>
+    <string name="post_image">포스트 이미지</string>
+    <string name="save">저장</string>
+    <string name="naver_search_hint">검색어 또는 URL 입력</string>
+    <string name="autocomplete_off">자동완성 끄기</string>
+    <string name="help">도움말</string>
+    <string name="report">신고</string>
+    <string name="autocomplete_help">관심사를 반영한 컨텍스트 자동완성도움말</string>
+    <string name="cancel">취소</string>
+    <string name="selection_button">선택 버튼</string>
 </resources>
