--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,9 @@
     <string name="share">공유</string>
 
     <!-- Naver Activity -->
+    <string name="blog_naver_com_synergy">blog.naver.com > synergy</string>
     <string name="naver_talk">네이버 톡</string>
+    <string name="more_button">더보기 버튼</string>
     <string name="notification">알림</string>
     <string name="wallet">지갑</string>
     <string name="menu">메뉴</string>
@@ -64,10 +66,12 @@
     <string name="search_menu">검색 메뉴</string>
     <string name="profile_image">프로필 이미지</string>
     <string name="seven_days_ago">7일 전</string>
+    <string name="synergy_explanation">오늘은 특별한 앱, 바로 시너지라는 이름으로 잘 알려진 스마트폰 교육 앱에 대해 알아보겠습니다. 대장님과… 깃허브와 피그마를 이용하여 열심히…</string>
     <string name="cuter_than_i_thought">생각보다 귀여움</string>
     <string name="post_image">포스트 이미지</string>
     <string name="save">저장</string>
     <string name="naver_search_hint">검색어 또는 URL 입력</string>
+    <string name="naver_search_hint_2">검색어를 입력해주세요.</string>
     <string name="autocomplete_off">자동완성 끄기</string>
     <string name="help">도움말</string>
     <string name="report">신고</string>
