--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,13 +95,16 @@
     <string name="send_button">보내기 버튼</string>
     <string name="text_message">문자 메시지</string>
 
+    <string name="chatting">채팅</string>
     <string name="chatting_message">채팅+ 메시지</string>
     <string name="clip">클립</string>
     <string name="contents">콘텐츠</string>
     <string name="conversation">대화</string>
     <string name="entire">전체</string>
+    <string name="friend">친구</string>
     <string name="home">홈</string>
     <string name="hungry">배고파 밥 사줘</string>
     <string name="new_category">새 카테고리</string>
+    <string name="openchatting">오픈채팅</string>
     <string name="shopping">쇼핑</string>
 </resources>
