--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,5 @@
     <string name="new_category">새 카테고리</string>
     <string name="openchatting">오픈채팅</string>
     <string name="shopping">쇼핑</string>
+    <string name="title_activity_appbar">appbarActivity</string>
 </resources>
