✨(갤러리/스토리) 아이템 레이아웃 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,7 @@
     <string name="shooting">촬영</string>
     <string name="shopping">쇼핑</string>
     <string name="singletake">싱글테이크</string>
+    <string name="special_day">특별한 날</string>
     <string name="story">스토리</string>
     <string name="synergy_explanation">오늘은 특별한 앱, 바로 시너지라는 이름으로 잘 알려진 스마트폰 교육 앱에 대해 알아보겠습니다. 대장님과… 깃허브와 피그마를 이용하여 열심히…</string>
     <string name="text_message">문자 메시지</string>
