--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,10 @@
     <string name="zero">0</string>
     <string name="star">*</string>
     <string name="sharp">#</string>
-
+    <string name="editId_hint"><font size="14">6~15자 영문/숫자 조합으로 입력</font></string>
+    <string name="editPass_hint"><font size="14">6~15자 영문/숫자 조합으로 입력</font></string>
+    <string name="editNick_hint"><font size="14">6~15자 영문/숫자 조합으로 입력</font></string>
+    <string name="editPhone_hint"><font size="14">6~15자 영문/숫자 조합으로 입력</font></string>
     <string name="add_to_contacts">+ 연락처에 추가</string>
     <string name="album">앨범</string>
     <string name="autocomplete_help">관심사를 반영한 컨텍스트 자동완성도움말</string>
