--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,4 +110,5 @@
     <string name="video">비디오</string>
     <string name="video_call">영상 통화</string>
     <string name="wallet">지갑</string>
+    <string name="title_activity_ma">maActivity</string>
 </resources>
